<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CHHReader</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_back">Back</string>
    <string name="action_browser">Open in browser</string>
    <string name="action_share">Share</string>
    <string name="action_favor">Favorite</string>
    <string name="action_myfavor">My Favorite</string>
    <string name="action_share_account">Share account</string>
    <string name="empty_text">No Data</string>
    <string name="network_warn">Turn on Network</string>
    <string name="no_network">No network</string>
    <string name="network_warn_info">CHHReader needs access to network. Please turn on Wi-Fi or Mobile data.</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading&#8230;</string>
    <string name="load_more">Click to load more</string>
    <string name="not_support">Not support yet</string>
    <string name="no_update">Already the latest</string>
    <string name="no_more_data">Already reach the end</string>
    <string name="swipe_down_to_refresh">Pull to refresh&#8230;</string>
    <string name="refreshing">@string/loading</string>
    <string name="no_image_mode">Not load image</string>
    <string name="evernote">Evernote</string>
    <string name="save_to_evernote">Save to Evernote&#8230;</string>
    <string name="note_saved">Note saved to Evernote</string>
    <string name="note_save_fail">Fail to save to Evernote</string>
    <string name="no_news_mode">Not show News</string>
    <string name="origin_url">Origin link</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

</resources>