<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_do_refresh"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_refresh"/>
    <item
        android:id="@+id/action_myfavor"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_myfavor"/>
    <item
        android:id="@+id/action_share_account"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_share_account"/>
    <item
        android:id="@+id/action_no_image"
        android:checkable="true"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/no_image_mode"/>
    <item
        android:id="@+id/action_no_news"
        android:checkable="true"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/no_news_mode"/>

</menu>