<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_back"
        android:icon="@drawable/ic_menu_back"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_back"/>
    <item
        android:id="@+id/action_view_in_browser"
        android:icon="@drawable/ic_menu_browser"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_browser"/>
    <item
        android:id="@+id/action_evernote"
        android:icon="@drawable/ic_menu_evernote"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_share"/>
    <item
        android:id="@+id/action_share"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:icon="@drawable/ic_menu_share"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_share"/>
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_menu_refresh"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_refresh"/>

</menu>