<?xml version="1.0" encoding="UTF-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#ff222222" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/network_warn"
            android:textColor="#ffce0000"
            android:textSize="23sp" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#ff343434" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/network_warn_info"
            android:textColor="#fff0f0f0"
            android:textSize="17.33sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/net_cancel"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:background="@drawable/loadmore_btn"
                android:text="@string/cancel"
                android:textColor="#ffbababa"
                android:textSize="19.33sp" />

            <Button
                android:id="@+id/net_settings"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/loadmore_btn"
                android:text="@string/settings"
                android:textColor="#ffbababa"
                android:textSize="19.33sp" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>